--- a/index.html
+++ b/index.html
@@ -7188,10 +7188,6 @@
       const [isHost, setIsHost] = useState(false);
       const [playerId, setPlayerId] = useState(null);
 
-      // Expose to window for debugging
-      window.dbg_gs = gs;
-      window.dbg_isHost = isHost;
-      window.dbg_phase = phase;
       const [joinCode, setJoinCode] = useState('');
 
       const [gs, setGs] = useState({
@@ -7218,6 +7214,13 @@
         isGameOver: false,
         gameOverReason: null
       });
+
+      // Expose to window for debugging
+      useEffect(() => {
+        window.dbg_gs = gs;
+        window.dbg_isHost = isHost;
+        window.dbg_phase = phase;
+      }, [gs, isHost, phase]);
 
       const resetGame = () => {
         if (isHost && roomCode) {
@@ -9012,60 +9015,6 @@
               </div>
             </div>
           ))}
-        </div>
-      );
-    }
-
-    function TabNegotiation({ gs }) {
-      return (
-        <div className="animate-page space-y-8">
-          <div className="text-center space-y-2">
-            <h2 className="text-5xl font-extrabold tracking-tight uppercase">Libro de <span className="text-orange-500 italic">Pactos</span></h2>
-            <p className="text-slate-500 font-medium">Registro histórico de compromisos, alianzas y prebendas legislativas.</p>
-          </div>
-
-          {(gs.pacts || []).length === 0 ? (
-            <div className="glass rounded-[3rem] p-16 text-center space-y-6 opacity-60">
-              <Icon name="shake" className="w-16 h-16 text-slate-700 mx-auto" />
-              <p className="text-slate-500 uppercase text-sm font-black tracking-widest">No hay registros de pactos en esta administración</p>
-            </div>
-          ) : (
-            <div className="glass rounded-[2.5rem] overflow-hidden border border-white/10">
-              <table className="w-full text-left border-collapse">
-                <thead>
-                  <tr className="bg-white/5 text-slate-500 uppercase text-[12px] font-black tracking-widest">
-                    <th className="px-8 py-6">Promitente</th>
-                    <th className="px-8 py-6">Beneficiario</th>
-                    <th className="px-8 py-6">Compromiso</th>
-                    <th className="px-8 py-6 text-center">Estado</th>
-                    <th className="px-4 py-6 text-center">T. Pacto</th>
-                    <th className="px-4 py-6 text-right">Resolución</th>
-                  </tr>
-                </thead>
-                <tbody className="text-[14px]">
-                  {(gs.pacts || []).map((pact, i) => (
-                    <tr key={i} className="border-b border-white/5 hover:bg-white/5 transition-colors group">
-                      <td className="px-8 py-6 font-bold text-white">
-                        <div className="flex items-center space-x-3">
-                          <div className="w-2 h-8 rounded-full" style={{ backgroundColor: gs.players[pact.promisorIdx]?.color || '#fff' }}></div>
-                          <span>{pact.promisorName}</span>
-                        </div>
-                      </td>
-                      <td className="px-8 py-6 font-medium text-slate-300">{pact.beneficiaryName}</td>
-                      <td className="px-8 py-6 font-medium text-slate-400 italic">"{pact.detail}"</td>
-                      <td className="px-8 py-6 text-center uppercase text-[11px] font-black">
-                        <span className={pact.status === 'Cumplido' ? 'text-emerald-500' : pact.status === 'Traicionado' || pact.status === 'Traición' ? 'text-red-500' : 'text-orange-400'}>
-                          {pact.status}
-                        </span>
-                      </td>
-                      <td className="px-4 py-6 text-center text-slate-500 font-mono">#{pact.turnCreated}</td>
-                      <td className="px-4 py-6 text-right text-slate-500 font-mono">{pact.turnResolved ? `#${pact.turnResolved}` : '--'}</td>
-                    </tr>
-                  ))}
-                </tbody>
-              </table>
-            </div>
-          )}
         </div>
       );
     }
